--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    This is the default project content.
+    Welcome to the JSR 224 (JAX-RPC 2.0) Expert Group homepage.
   </body>
 </html>
