added minutes of 9/25/03 meeting

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,17 @@
 <html>
   <body>
-    Welcome to the JSR 224 (JAX-RPC 2.0) Expert Group homepage.
+    <p>Welcome to the JSR 224 (JAX-RPC 2.0) Expert Group homepage.<p>
+    <p>Regular weekly telcon on Thursdays, start time is noon PT, 3pm
+ET, 9pm central Europe. Scheduled duration is 1 hour. Call in number: 1
+865 525 0765, access code: 4669616, security code 2302.</p>
+    <h2>Action Items</h2>
+    <ul>
+        <li>Russell to talk to Jim Knutson and report back on future plans for JSR-109.</li>
+        <li>Sunil to send mail on his "outside the BP envelope" requirement.</li>
+    </ul>
+    <h2>EG Meeting Minutes</h2>
+    <ul>
+        <li><a href="meetings/Minutes20030925.txt">20030925</a></li>
+    </ul>
   </body>
 </html>
