updates after 10/10 EG telcon

--- a/www/index.html
+++ b/www/index.html
@@ -6,12 +6,19 @@ ET, 9pm central Europe. Scheduled duration is 1 hour. Call in number: 1
 865 525 0765, access code: 4669616, security code 2302.</p>
     <h2>Action Items</h2>
     <ul>
-        <li>Russell to talk to Jim Knutson and report back on future plans for JSR-109.</li>
-        <li>Sunil to send mail on his "outside the BP envelope" requirement.</li>
+        <li>Marc to contact JSR 181 spec lead re alignment and timelines.</li>
+        <li>Marc to rewrite JSR109 relationship goal to make relationship clearer.</li>
+        <li>Marc to go through 1.1 issues posted to list and post disposition to list.</li>
+        <li>Sunil to send proposal for async client API - due early Nov.</li>
+        <li>Marc to contact JSR 208 spec lead re requirements on JSR 224.</li>
+        <li>Marc to split backwards compatibility non-goal to make binary compatibility goal clearer.</li>
+        <li>Sunil to send proposal for enhanced DII API - due early Nov.</li>
+        <li>All to study Sunil WS-I proposal and start discussion on the mailing list.</li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20030925.txt">20030925</a></li>
+        <li><a href="meetings/Minutes20031009.txt">20031009</a> (Draft)</li>
+        <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
     </ul>
   </body>
 </html>
