Added pointer to mailing list and archive

--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,18 @@
 <html>
   <body>
     <p>Welcome to the JSR 224 (JAX-RPC 2.0) Expert Group homepage.<p>
+
     <p>Regular weekly telcon on Thursdays, start time is noon PT, 3pm
-ET, 9pm central Europe. Scheduled duration is 1 hour. Call in number: 1
-865 525 0765, access code: 4669616, security code 2302.</p>
+    ET, 9pm central Europe. Scheduled duration is 1 hour. Call in
+    number: 1 865 525 0765, access code: 4669616, security code
+    2302.</p>
+
+    <p>Please use <a
+    href="mailto:jsr-224-eg@jcp.org">jsr-224-eg@jcp.org</a> for expert
+    group discussions. The list is archived at: <a
+    href="http://archives.java.sun.com/jsr-224-eg.html">http://archives.
+    java.sun.com/jsr-224-eg.html</a>.</p>
+
     <h2>Action Items</h2>
     <ul>
         <li>Marc to contact JSR 181 spec lead re alignment and timelines.</li>
