updates follow 20021016 telcon

--- a/www/index.html
+++ b/www/index.html
@@ -16,18 +16,20 @@
     <h2>Action Items</h2>
     <ul>
         <li>Marc to contact JSR 181 spec lead re alignment and timelines.</li>
-        <li>Marc to rewrite JSR109 relationship goal to make relationship clearer.</li>
-        <li>Marc to go through 1.1 issues posted to list and post disposition to list.</li>
+        <li>Sunil to draft concrete proposal for JAX-RPC changes required to move from implicit to explicit WS-I conformance.</li>
+        <li>Marc to send out prioritization poll for JAX-RPC 2.0 goals.</li> 
         <li>Sunil to send proposal for async client API - due early Nov.</li>
-        <li>Marc to contact JSR 208 spec lead re requirements on JSR 224.</li>
-        <li>Marc to split backwards compatibility non-goal to make binary compatibility goal clearer.</li>
         <li>Sunil to send proposal for enhanced DII API - due early Nov.</li>
-        <li>All to study Sunil WS-I proposal and start discussion on the mailing list.</li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031009.txt">20031009</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031016.txt">20031016</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
+    </ul>
+    <h2>Specification Drafts</h2>
+    <ul>
+        <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
     </ul>
   </body>
 </html>
