Updated following 10/23 EG meeting

--- a/www/index.html
+++ b/www/index.html
@@ -15,15 +15,18 @@
 
     <h2>Action Items</h2>
     <ul>
-        <li>Marc to contact JSR 181 spec lead re alignment and timelines.</li>
+        <li>Marc to create a new issue for doc/lit wrapped impact on JAXB.</li>
+        <li>Dennis to raise the issue of exception->XML mapping with JAXB.</li>
+        <li>Chavdar to start mail thread on mapping from exceptions to SOAP fault text and code.</li>
+        <li>Roberto will look into J2EE 1.4 spec to see whether we can get around the Serializable requirement.</l>
         <li>Sunil to draft concrete proposal for JAX-RPC changes required to move from implicit to explicit WS-I conformance.</li>
-        <li>Marc to send out prioritization poll for JAX-RPC 2.0 goals.</li> 
         <li>Sunil to send proposal for async client API - due early Nov.</li>
         <li>Sunil to send proposal for enhanced DII API - due early Nov.</li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031016.txt">20031016</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031023.txt">20031023</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031016.txt">20031016</a> (Approved)</li>
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
     </ul>
