--- a/www/index.html
+++ b/www/index.html
@@ -19,17 +19,19 @@
         <li>Marc to circulate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Sunil to draft concrete proposal for JAX-RPC changes required to move from implicit to explicit WS-I conformance.</li>
         <li>Sunil to send proposal for async client API - due early Nov.</li>
+        <li>Toshiyuki to send proposal for async client API - due early Nov.</li>
         <li>Sunil to send proposal for enhanced DII API - due early Nov.</li>
         <li>Russel to send proposal for improving handler framework.</li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
+        <li><a href="meetings/Minutes20031030.txt">20031030</a> (Draft)</li>
         <li><a href="meetings/Minutes20031023.txt">20031023</a> (Approved)</li>
         <li><a href="meetings/Minutes20031016.txt">20031016</a> (Approved)</li>
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
     </ul>
-    <h2>Specification Drafts</h2>
+    <h2>Specification Drafts/Proposals</h2>
     <ul>
         <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
     </ul>
