Added link to exception proposal.

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <h2>Specification Drafts/Proposals</h2>
     <ul>
         <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
+        <li><a href="faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
     </ul>
   </body>
 </html>
