--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,15 @@
     <h2>Action Items</h2>
     <ul>
         <li>Roberto to add information to issue #8 re serializable requirement for method params.</li>
-        <li>Marc to circulate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Sunil to draft concrete proposal for JAX-RPC changes required to move from implicit to explicit WS-I conformance.</li>
-        <li>Sunil to send proposal for async client API - due early Nov.</li>
-        <li>Toshiyuki to send proposal for async client API - due early Nov.</li>
-        <li>Sunil to send proposal for enhanced DII API - due early Nov.</li>
+        <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
+        <li>Marc to add Sunil proposal for JAX-RPC explicit WS-I conformance changes.</li>
+        <li>Roberto to send note on DII enhancements / SAAJ overlap.</li>
         <li>Russel to send proposal for improving handler framework.</li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031030.txt">20031030</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031120.txt">20031120</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031030.txt">20031030</a> (Approved)</li>
         <li><a href="meetings/Minutes20031023.txt">20031023</a> (Approved)</li>
         <li><a href="meetings/Minutes20031016.txt">20031016</a> (Approved)</li>
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
