*** empty log message ***

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <ul>
         <li>Roberto to add information to issue #8 re serializable requirement for method params.</li>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Marc to add Sunil proposal for JAX-RPC explicit WS-I conformance changes.</li>
+        <li>Marc to put Sunil proposal for JAX-RPC explicit WS-I conformance changes on future agenda.</li>
         <li>Roberto to send note on DII enhancements / SAAJ overlap.</li>
         <li>Russel to send proposal for improving handler framework.</li>
     </ul>
