Updated status of minutes and action items.

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,6 @@
 
     <h2>Action Items</h2>
     <ul>
-        <li>Roberto to add information to issue #8 re serializable requirement for method params.</li>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Marc to put Sunil proposal for JAX-RPC explicit WS-I conformance changes on future agenda.</li>
         <li>Roberto to send note on DII enhancements / SAAJ overlap.</li>
@@ -23,7 +22,7 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031120.txt">20031120</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031120.txt">20031120</a> (Approved)</li>
         <li><a href="meetings/Minutes20031030.txt">20031030</a> (Approved)</li>
         <li><a href="meetings/Minutes20031023.txt">20031023</a> (Approved)</li>
         <li><a href="meetings/Minutes20031016.txt">20031016</a> (Approved)</li>
