--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
+	<li><a href="meetings/Minutes20031204.txt">20031204</a> (Draft)</li>
         <li><a href="meetings/Minutes20031120.txt">20031120</a> (Approved)</li>
         <li><a href="meetings/Minutes20031030.txt">20031030</a> (Approved)</li>
         <li><a href="meetings/Minutes20031023.txt">20031023</a> (Approved)</li>
