Updates following 12/18 EG telcon

--- a/www/index.html
+++ b/www/index.html
@@ -18,11 +18,21 @@
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Roberto to send note on DII enhancements / SAAJ overlap.</li>
         <li>Russel to send proposal for improving handler framework.</li>
-        <li>Marc to put together example of typesafe callback implementation without holders</li>
+        <li>Marc to propose a refactoring for Call/AsyncCall</li>
+        <li>Marc to contact the JSR-166 spec lead about Cancellable</li>
+        <li>Marc to raise new issue re Clarification of ServletEndpointContext.getMessageContext</li>
+        <li>roberto to raise issue about the interaction of polling (get) and callbacks</li>
+    </ul>
+    <h2>Specification Drafts/Proposals</h2>
+    <ul>
+        <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
+        <li><a href="proposals/faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
+        <li><a href="proposals/async.txt">Async API Proposal</a></li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031211.txt">20031211</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031218.txt">20031218</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031211.txt">20031211</a> (Approved)</li>
         <li><a href="meetings/Minutes20031204.txt">20031204</a> (Approved)</li>
         <li><a href="meetings/Minutes20031120.txt">20031120</a> (Approved)</li>
         <li><a href="meetings/Minutes20031030.txt">20031030</a> (Approved)</li>
@@ -30,12 +40,6 @@
         <li><a href="meetings/Minutes20031016.txt">20031016</a> (Approved)</li>
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
-    </ul>
-    <h2>Specification Drafts/Proposals</h2>
-    <ul>
-        <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
-        <li><a href="proposals/faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
-        <li><a href="proposals/async.txt">Async API Proposal</a></li>
     </ul>
   </body>
 </html>
