Updates following EG meeting 1/15/04

--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,9 @@
     <h2>Action Items</h2>
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Roberto to send note on DII enhancements / SAAJ overlap.</li>
         <li>Russel to send proposal for improving handler framework.</li>
-        <li>Marc to propose a refactoring for Call/AsyncCall</li>
-        <li>Marc to contact the JSR-166 spec lead about Cancellable</li>
-        <li>Marc to raise new issue re Clarification of ServletEndpointContext.getMessageContext</li>
         <li>roberto to raise issue about the interaction of polling (get) and callbacks</li>
+        <li>Marc to confirm F2F arrangements</li>
     </ul>
     <h2>Specification Drafts/Proposals</h2>
     <ul>
@@ -31,7 +28,8 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20031218.txt">20031218</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031218.txt">20040115</a> (Draft)</li>
+        <li><a href="meetings/Minutes20031218.txt">20031218</a> (Approved)</li>
         <li><a href="meetings/Minutes20031211.txt">20031211</a> (Approved)</li>
         <li><a href="meetings/Minutes20031204.txt">20031204</a> (Approved)</li>
         <li><a href="meetings/Minutes20031120.txt">20031120</a> (Approved)</li>
