Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Russel to send proposal for improving handler framework.</li>
-        <li>roberto to raise issue about the interaction of polling (get) and callbacks</li>
+        <li>Roberto to raise issue about the interaction of polling (get) and callbacks</li>
         <li>Marc to confirm F2F arrangements</li>
     </ul>
     <h2>Specification Drafts/Proposals</h2>
