Added minutes of 2004-01-22 meeting. Updated action item list. Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/index.html
+++ b/www/index.html
@@ -16,9 +16,8 @@
     <h2>Action Items</h2>
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Russel to send proposal for improving handler framework.</li>
-        <li>Roberto to raise issue about the interaction of polling (get) and callbacks</li>
-        <li>Marc to confirm F2F arrangements</li>
+        <li>Russell to send proposal for improving handler framework.</li>
+	<li>Dennis to write something up on linking the JAXB and JAX-RPC frameworks.</li>
     </ul>
     <h2>Specification Drafts/Proposals</h2>
     <ul>
@@ -28,7 +27,8 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20040115.txt">20040115</a> (Draft)</li>
+	<li><a href="meetings/Minutes20040122.txt">20040122</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040115.txt">20040115</a> (Approved)</li>
         <li><a href="meetings/Minutes20031218.txt">20031218</a> (Approved)</li>
         <li><a href="meetings/Minutes20031211.txt">20031211</a> (Approved)</li>
         <li><a href="meetings/Minutes20031204.txt">20031204</a> (Approved)</li>
