Updates following EG telcon

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-	<li><a href="meetings/Minutes20040122.txt">20040122</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040122.txt">20040122</a> (Approved)</li>
         <li><a href="meetings/Minutes20040115.txt">20040115</a> (Approved)</li>
         <li><a href="meetings/Minutes20031218.txt">20031218</a> (Approved)</li>
         <li><a href="meetings/Minutes20031211.txt">20031211</a> (Approved)</li>
