Updates following 1/29/04 EG meeting

--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,9 @@
     <h2>Action Items</h2>
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Russell to send proposal for improving handler framework.</li>
-	<li>Dennis to write something up on linking the JAXB and JAX-RPC frameworks.</li>
+        <li>Marc to circulate example of using JAXB with DII</li>
+        <li>Doug to elaborate on problems with service.createCall</li>
+        <li>Marc to think about how faults fit in with DII</li>
     </ul>
     <h2>Specification Drafts/Proposals</h2>
     <ul>
@@ -27,6 +28,7 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
+        <li><a href="meetings/Minutes20040129.txt">20040129</a> (Draft)</li>
         <li><a href="meetings/Minutes20040122.txt">20040122</a> (Approved)</li>
         <li><a href="meetings/Minutes20040115.txt">20040115</a> (Approved)</li>
         <li><a href="meetings/Minutes20031218.txt">20031218</a> (Approved)</li>
