Added Russel's handler proposal

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
         <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
         <li><a href="proposals/faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
         <li><a href="proposals/async.txt">Async API Proposal</a></li>
+        <li><a href="proposals/JAXRPC_Handlers.pdf">Handlers Proposal (PDF)</a></li>
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
