Updates following 2/5 EG meeting.

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,8 @@
     </ul>
     <h2>EG Meeting Minutes</h2>
     <ul>
-        <li><a href="meetings/Minutes20040129.txt">20040129</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040129.txt">20040205</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040129.txt">20040129</a> (Approved)</li>
         <li><a href="meetings/Minutes20040122.txt">20040122</a> (Approved)</li>
         <li><a href="meetings/Minutes20040115.txt">20040115</a> (Approved)</li>
         <li><a href="meetings/Minutes20031218.txt">20031218</a> (Approved)</li>
