Added link to F2F info

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,8 @@
         <li><a href="proposals/async.txt">Async API Proposal</a></li>
         <li><a href="proposals/JAXRPC_Handlers.pdf">Handlers Proposal (PDF)</a></li>
     </ul>
-    <h2>EG Meeting Minutes</h2>
+    <h2>EG Meetings</h2>
+    <p><a href="SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
         <li><a href="meetings/Minutes20040205.txt">20040205</a> (Draft)</li>
         <li><a href="meetings/Minutes20040129.txt">20040129</a> (Approved)</li>
