--- a/www/index.html
+++ b/www/index.html
@@ -20,12 +20,18 @@
         <li>Doug to elaborate on problems with service.createCall</li>
         <li>Marc to think about how faults fit in with DII</li>
     </ul>
-    <h2>Specification Drafts/Proposals</h2>
+
+    <h2>Proposals</h2>
     <ul>
-        <li><a href="spec20031017.pdf">Draft Chap 1 20031017</a></li>
         <li><a href="proposals/faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
         <li><a href="proposals/async.txt">Async API Proposal</a></li>
         <li><a href="proposals/JAXRPC_Handlers.pdf">Handlers Proposal (PDF)</a></li>
+    </ul>
+
+    <h2>Specification Drafts/Proposals</h2>
+    <ul>
+        <li><a href="drafts/spec20040211.pdf">Draft Intro, Core API 20040211</a></li>
+        <li><a href="drafts/spec20031017.pdf">Draft Intro 20031017</a></li>
     </ul>
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
