--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,6 @@
     <h2>Action Items</h2>
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
-        <li>Marc to circulate example of using JAXB with DII</li>
-        <li>Doug to elaborate on problems with service.createCall</li>
         <li>Marc to think about how faults fit in with DII</li>
     </ul>
 
@@ -36,7 +34,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040205.txt">20040205</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040205.txt">20040212</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040205.txt">20040205</a> (Approved)</li>
         <li><a href="meetings/Minutes20040129.txt">20040129</a> (Approved)</li>
         <li><a href="meetings/Minutes20040122.txt">20040122</a> (Approved)</li>
         <li><a href="meetings/Minutes20040115.txt">20040115</a> (Approved)</li>
