--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <ul>
         <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Marc to think about how faults fit in with DII</li>
+        <li>Sunil to provide use case / message processing flow to explain why calling handleClosure in addition to handleFault/handleResponse is preferable</li>
     </ul>
 
     <h2>Proposals</h2>
@@ -34,7 +35,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040212.txt">20040212</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040219.txt">20040219</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040212.txt">20040212</a> (Approved)</li>
         <li><a href="meetings/Minutes20040205.txt">20040205</a> (Approved)</li>
         <li><a href="meetings/Minutes20040129.txt">20040129</a> (Approved)</li>
         <li><a href="meetings/Minutes20040122.txt">20040122</a> (Approved)</li>
