--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040219.txt">20040219</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040226.txt">20040226</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040219.txt">20040219</a> (Approved)</li>
         <li><a href="meetings/Minutes20040212.txt">20040212</a> (Approved)</li>
         <li><a href="meetings/Minutes20040205.txt">20040205</a> (Approved)</li>
         <li><a href="meetings/Minutes20040129.txt">20040129</a> (Approved)</li>
