Fixed action item list

--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,8 @@
 
     <h2>Action Items</h2>
     <ul>
-        <li>Glen to circulate alternate proposal for dealing with protocol specific fault information on client and server side</li>
         <li>Marc to think about how faults fit in with DII</li>
-        <li>Sunil to provide use case / message processing flow to explain why calling handleClosure in addition to handleFault/handleResponse is preferable</li>
+        <li>Marc to poll about what happens when client side handleRequest throws RuntimeException</li>
     </ul>
 
     <h2>Proposals</h2>
