Updates following 3/4/04 telcon

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,6 @@
     <h2>Action Items</h2>
     <ul>
         <li>Marc to think about how faults fit in with DII</li>
-        <li>Marc to poll about what happens when client side handleRequest throws RuntimeException</li>
     </ul>
 
     <h2>Proposals</h2>
@@ -35,7 +34,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040226.txt">20040226</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040304.txt">20040304</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040226.txt">20040226</a> (Approved)</li>
         <li><a href="meetings/Minutes20040219.txt">20040219</a> (Approved)</li>
         <li><a href="meetings/Minutes20040212.txt">20040212</a> (Approved)</li>
         <li><a href="meetings/Minutes20040205.txt">20040205</a> (Approved)</li>
