--- a/www/index.html
+++ b/www/index.html
@@ -16,10 +16,9 @@
     <h2>Action Items</h2>
     <ul>
         <li>Marc to think about how faults fit in with DII</li>
-        <li>Marc to sketch out a provider interface for server side, similar to Dispatch on client side</li>
-        <li>Manoj to check whether JSR 181 rev 1.1 will be ready for J2EE 1.5</li>
-        <li>Marc to write up a proposal on how handlers, services, ports etc. work.</li>
+        <li>Roberto and Marc to send out a written proposal for a server side provider interface, similar to Dispatch on client side</li>
         <li>Marc to see if a F2F can be done in June with JAXB, if not then, July</li>
+        <li>Roberto to clarify question in point (iii) in Marc's mail re how handlers, services, ports etc. work</li>
     </ul>
 
     <h2>Proposals</h2>
@@ -39,6 +38,7 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
+        <li><a href="meetings/Minutes20040325.txt">20040325</a> (Draft)</li>
         <li><a href="meetings/Minutes20040310.txt">20040310</a> (Draft)</li>
         <li><a href="meetings/Minutes20040304.txt">20040304</a> (Approved)</li>
         <li><a href="meetings/Minutes20040226.txt">20040226</a> (Approved)</li>
