Updates following 4/1/2004 eg con call

--- a/www/index.html
+++ b/www/index.html
@@ -15,10 +15,11 @@
 
     <h2>Action Items</h2>
     <ul>
-        <li>Marc to think about how faults fit in with DII</li>
         <li>Roberto and Marc to send out a written proposal for a server side provider interface, similar to Dispatch on client side</li>
         <li>Marc to see if a F2F can be done in June with JAXB, if not then, July</li>
-        <li>Roberto to clarify question in point (iii) in Marc's mail re how handlers, services, ports etc. work</li>
+        <li>Roberto will contact to JAXB on their position on
+UnmarshallingException</li>
+        <li>Glen will start a mailing thread on keeping the JAXRPContext as parameter or set it as a property of a Dispatch?</li>
     </ul>
 
     <h2>Proposals</h2>
@@ -38,8 +39,9 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040325.txt">20040325</a> (Draft)</li>
-        <li><a href="meetings/Minutes20040310.txt">20040310</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040401.txt">20040401</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
+        <li><a href="meetings/Minutes20040310.txt">20040310</a> (Approved)</li>
         <li><a href="meetings/Minutes20040304.txt">20040304</a> (Approved)</li>
         <li><a href="meetings/Minutes20040226.txt">20040226</a> (Approved)</li>
         <li><a href="meetings/Minutes20040219.txt">20040219</a> (Approved)</li>
