Updates following 4/8/04 telcon

--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,8 @@
     <ul>
         <li>Roberto and Marc to send out a written proposal for a server side provider interface, similar to Dispatch on client side</li>
         <li>Marc to see if a F2F can be done in June with JAXB, if not then, July</li>
-        <li>Roberto will contact to JAXB on their position on
-UnmarshallingException</li>
-        <li>Glen will start a mailing thread on keeping the JAXRPContext as parameter or set it as a property of a Dispatch?</li>
+        <li>Roberto will summarize discussion on JAXB UnmarshallingException capabilities</li>
+        <li>Marc/Glen will start a mailing thread on keeping the JAXRPContext as parameter or set it as a property of a Dispatch?</li>
     </ul>
 
     <h2>Proposals</h2>
@@ -39,7 +38,8 @@ UnmarshallingException</li>
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040401.txt">20040401</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040408.txt">20040408</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
         <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
         <li><a href="meetings/Minutes20040310.txt">20040310</a> (Approved)</li>
         <li><a href="meetings/Minutes20040304.txt">20040304</a> (Approved)</li>
