--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040408.txt">20040408</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040415.txt">20040415</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040408.txt">20040408</a> (Approved)</li>
         <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
         <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
         <li><a href="meetings/Minutes20040310.txt">20040310</a> (Approved)</li>
