Updates following 5/6/04 telcon

--- a/www/index.html
+++ b/www/index.html
@@ -15,16 +15,12 @@
 
     <h2>Action Items</h2>
     <ul>
-        <li>Roberto and Marc to send out a written proposal for a server side provider interface, similar to Dispatch on client side</li>
-        <li>Marc to see if a F2F can be done in June with JAXB, if not then, July</li>
-        <li>Roberto will summarize discussion on JAXB UnmarshallingException capabilities</li>
+      <li>None at present.</li>
     </ul>
 
     <h2>Proposals</h2>
     <ul>
-        <li><a href="proposals/faultproposal.html">Protocol Specific Exception Handling Proposal</a></li>
-        <li><a href="proposals/async.txt">Async API Proposal</a></li>
-        <li><a href="proposals/JAXRPC_Handlers.pdf">Handlers Proposal (PDF)</a></li>
+      <li>None at present.</li>
     </ul>
 
     <h2>Specification Drafts</h2>
@@ -38,7 +34,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040415.txt">20040415</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040506.txt">20040506</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040415.txt">20040415</a> (Approved)</li>
         <li><a href="meetings/Minutes20040408.txt">20040408</a> (Approved)</li>
         <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
         <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
