Updates following 5/27/04 EG telcon

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,8 @@
     <h2>EG Meetings</h2>
     <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040506.txt">20040506</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040527.txt">20040527</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040506.txt">20040506</a> (Approved)</li>
         <li><a href="meetings/Minutes20040415.txt">20040415</a> (Approved)</li>
         <li><a href="meetings/Minutes20040408.txt">20040408</a> (Approved)</li>
         <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
