Updates following EG telcon 6/3

--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
   <body>
     <p>Welcome to the JSR 224 (JAX-RPC 2.0) Expert Group homepage.<p>
 
-    <p>Regular weekly telcon on Thursdays, start time is noon PT, 3pm
+    <p>Scheduled telcons are on Thursdays, start time is noon PT, 3pm
     ET, 9pm central Europe. Scheduled duration is 1 hour. Call in
     number: 1 865 525 0765, access code: 4669616, security code
     2302.</p>
@@ -33,9 +33,9 @@
         <li>20031017: <a href="drafts/spec20031017.pdf">Draft Intro</a></li>
     </ul>
     <h2>EG Meetings</h2>
-    <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
     <ul>
-        <li><a href="meetings/Minutes20040527.txt">20040527</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040603.txt">20040603</a> (Draft)</li>
+        <li><a href="meetings/Minutes20040527.txt">20040527</a> (Approved)</li>
         <li><a href="meetings/Minutes20040506.txt">20040506</a> (Approved)</li>
         <li><a href="meetings/Minutes20040415.txt">20040415</a> (Approved)</li>
         <li><a href="meetings/Minutes20040408.txt">20040408</a> (Approved)</li>
@@ -60,5 +60,6 @@
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
     </ul>
+    <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
   </body>
 </html>
