--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
     </ul>
     <h2>EG Meetings</h2>
     <ul>
+        <li><a href="meetings/SunF2F/index2.html">Local information for EG October F2F meeting at Sun's Santa Clara, CA campus.</a></li>
+        <li><a href="meetings/Minutes20040824.txt">20040824</a> (Draft)</li>
         <li><a href="meetings/Minutes20040603.txt">20040603</a> (Draft)</li>
         <li><a href="meetings/Minutes20040527.txt">20040527</a> (Approved)</li>
         <li><a href="meetings/Minutes20040506.txt">20040506</a> (Approved)</li>
@@ -43,6 +45,7 @@
         <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
         <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
         <li><a href="meetings/Minutes20040310.txt">20040310</a> (Approved)</li>
+        <li><a href="meetings/SunF2F/index2.html">Local information for EG October F2F meeting at Sun's Santa Clara, CA campus.</a></li>
         <li><a href="meetings/Minutes20040304.txt">20040304</a> (Approved)</li>
         <li><a href="meetings/Minutes20040226.txt">20040226</a> (Approved)</li>
         <li><a href="meetings/Minutes20040219.txt">20040219</a> (Approved)</li>
@@ -61,6 +64,5 @@
         <li><a href="meetings/Minutes20031009.txt">20031009</a> (Approved)</li>
         <li><a href="meetings/Minutes20030925.txt">20030925</a> (Approved)</li>
     </ul>
-    <p><a href="meetings/SunF2F/index.html">Local information for EG March F2F meeting at Sun's Burlington, MA campus.</a></p>
   </body>
 </html>
