Added context proposal

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 
     <h2>Proposals</h2>
     <ul>
-      <li>None at present.</li>
+      <li><a href="proposals/refactctx.pdf">Refactoring context (PDF)</a>.</li>
     </ul>
 
     <h2>Specification Drafts</h2>
@@ -46,7 +46,7 @@
         <li><a href="meetings/Minutes20040401.txt">20040401</a> (Approved)</li>
         <li><a href="meetings/Minutes20040325.txt">20040325</a> (Approved)</li>
         <li><a href="meetings/Minutes20040310.txt">20040310</a> (Approved)</li>
-        <li><a href="meetings/SunF2F/index2.html">Local information for EG October F2F meeting at Sun's Santa Clara, CA campus.</a></li>
+        <li><a href="meetings/SunF2F/index.html">Local information for EG April F2F meeting at Sun's Burlington, MA campus.</a></li>
         <li><a href="meetings/Minutes20040304.txt">20040304</a> (Approved)</li>
         <li><a href="meetings/Minutes20040226.txt">20040226</a> (Approved)</li>
         <li><a href="meetings/Minutes20040219.txt">20040219</a> (Approved)</li>
