Added customization presentation.

--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
     </ul>
     <h2>EG Meetings</h2>
     <ul>
-        <li><a href="meetings/F2F_2/Minutes20041014.txt">20041014 F2F</a>. Presentations: <a href="meetings/F2F_2/RefactoringContext.pdf">Refactoring Context (PDF)</a>, <a href="meetings/F2F_2/DynamicEndpoints.pdf">Dynamic Endpoints (PDF)</a>, <a href="meetings/F2F_2/SecurityAPI.pdf">Security API (PDF)</a>.</li>
+        <li><a href="meetings/F2F_2/Minutes20041014.txt">20041014 F2F</a>. Presentations: <a href="meetings/F2F_2/RefactoringContext.pdf">Refactoring Context (PDF)</a>, <a href="meetings/F2F_2/DynamicEndpoints.pdf">Dynamic Endpoints (PDF)</a>, <a href="meetings/F2F_2/SecurityAPI.pdf">Security API (PDF)</a>, <a href="meetings/F2F_2/customization.pdf">Customization (PDF)</a>.</li>
         <li><a href="meetings/SunF2F/index2.html">Local information for EG October F2F meeting at Sun's Santa Clara, CA campus.</a></li>
         <li><a href="meetings/Minutes20040824.txt">20040824</a> (Draft)</li>
         <li><a href="meetings/Minutes20040603.txt">20040603</a> (Draft)</li>
