--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,8 @@
     </ul>
     <h2>EG Meetings</h2>
     <ul>
-        <li><a href="meetings/Minutes20050512.txt">20050505</a> (Draft)</li>
+        <li><a href="meetings/Minutes20050519.txt">20050519</a> (Draft)</li>
+        <li><a href="meetings/Minutes20050512.txt">20050512</a> (Approved)</li>
         <li><a href="meetings/Minutes20050505.txt">20050505</a> (Approved)</li>
         <li><a href="meetings/Minutes20050210.txt">20050210</a> (Approved)</li>
         <li><a href="meetings/F2F_2/Minutes20041014.txt">20041014 F2F</a>. Presentations: <a href="meetings/F2F_2/RefactoringContext.pdf">Refactoring Context (PDF)</a>, <a href="meetings/F2F_2/DynamicEndpoints.pdf">Dynamic Endpoints (PDF)</a>, <a href="meetings/F2F_2/SecurityAPI.pdf">Security API (PDF)</a>, <a href="meetings/F2F_2/customization.pdf">Customization (PDF)</a>.</li>
