--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,8 @@
     </ul>
     <h2>EG Meetings</h2>
     <ul>
-        <li><a href="meetings/Minutes20050526.txt">20050526</a> (Draft)</li>
+        <li><a href="meetings/Minutes20050609.txt">20050609</a> (Draft)</li>
+        <li><a href="meetings/Minutes20050526.txt">20050526</a> (Approved)</li>
         <li><a href="meetings/Minutes20050519.txt">20050519</a> (Approved)</li>
         <li><a href="meetings/Minutes20050512.txt">20050512</a> (Approved)</li>
         <li><a href="meetings/Minutes20050505.txt">20050505</a> (Approved)</li>
