updating the 2.2 API diffs and proposals Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,9 @@
 
     <h2>Proposals</h2>
     <ul>
-      <li>None pending.</li>
+      <li><a href="proposals/AddressingProposal.pdf">Metadata Proposal</a></li>
+      <li><a href="proposals/HttpSPIProposal.txt">HTTP SPI Proposal</a></li>
+      <li><a href="proposals/diffs_2.1_2.2.zip">API diffs</a></li>
     </ul>
 
     <h2>Specification Drafts</h2>
