Adding 2.2 miscellaneous proposal Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <ul>
       <li><a href="proposals/AddressingProposal.pdf">Metadata Proposal</a></li>
       <li><a href="proposals/HttpSPIProposal.txt">HTTP SPI Proposal</a></li>
+      <li><a href="proposals/2.2miscProposal.pdf">Miscellaneous Proposal</a></li>
       <li><a href="proposals/diffs_2.1_2.2.zip">API diffs</a></li>
     </ul>
 
